[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["convexml"]

[project]
name = "convexml"
version = "0.1.0"
description = "ConvexML: Branch length estimation under irreversible mutation models."
authors = [{ name = "Sebastian Prillo" }]
requires-python = ">=3.10"
dependencies = [
    "cassiopeia-lineage @ git+https://github.com/YosefLab/Cassiopeia@master",
    "cvxpy",
    "networkx",
    "numpy",
]
