[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["convexml"]

[project]
name = "convexml"
version = "0.1.0"
description = "ConvexML: Branch length estimation under irreversible mutation models."
authors = [{ name = "Sebastian Prillo" }]
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"

dependencies = [
    "cassiopeia-lineage",
    "cvxpy",
    "networkx",
    "numpy",
]
